<resources>
    <string name="app_name">Clase 01</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_contrasenia">Contraseña</string>
    <string name="lbl_inicio">Inicio</string>
    <string name="lbl_registrarse">Registrarse</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_rep_contrasenia">Repetir Contraseña</string>
    <string name="lbl_registrar">Registrar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
