<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_usuario"
            android:inputType="text" />

        <EditText
            android:id="@+id/etContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_contrasenia"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_inicio" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tvRegistrarse"
        android:text="@string/lbl_registrarse"
        android:layout_height="wrap_content" />
</FrameLayout>